--- a/font-lists.html
+++ b/font-lists.html
@@ -13,8 +13,10 @@
 
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
 <link rel="preconnect" href="https://fonts.bunny.net">
-<link href="https://fonts.bunny.net/css?family=dm-serif-display:400" rel="stylesheet" />
+<link href="https://fonts.bunny.net/css?family=newsreader:300,300i" rel="stylesheet" />
+
 <link rel="stylesheet" href="assets/styles.css" />
   
 
@@ -73,7 +75,7 @@
 
 <footer class="footer">
   <small>
-    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://fonts.google.com/specimen/DM+Serif+Display">DM Serif Display</a> and <a href="https://rsms.me/inter/">Inter</a>.
+    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://www.productiontype.com/family/newsreader">Newsreader</a> and <a href="https://rsms.me/inter/">Inter</a>.
   </small>
 </footer>
 
