--- a/google-fonts.html
+++ b/google-fonts.html
@@ -13,8 +13,10 @@
 
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
 <link rel="preconnect" href="https://fonts.bunny.net">
-<link href="https://fonts.bunny.net/css?family=dm-serif-display:400" rel="stylesheet" />
+<link href="https://fonts.bunny.net/css?family=newsreader:300,300i" rel="stylesheet" />
+
 <link rel="stylesheet" href="assets/styles.css" />
   
 
@@ -49,7 +51,7 @@
   <div>
   <h1>Google Fonts</h1>
 <p class="lead">Boasting over 1,400 (and growing) font families, <a href="https://fonts.google.com">Google Fonts</a> is one of the most popular type libraries on the&nbsp;web.</p> 
-<p>All type in Google’s vast collection is published under an open source license (most fall under the <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL">SIL Open Font License</a>) meaning these fonts can be used on personal and commercial projects, and anything in between. Since these fonts are open source, they can be found othe places besides Google, such as <a href="https://github.com/">GitHub</a> and <a href="https://fonts.bunny.net">Bunny CDN</a>. Wading through thousands of free fonts can be a daunting endeavor, so here are (in my opinion) some of the most versatile and best-designed typefaces on Google Fonts.</p>
+<p>All type in Google’s vast collection is published under an open source license (most fall under the <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL">SIL Open Font License</a>) meaning these fonts can be used on personal and commercial projects, and anything in between. Since these fonts are open source, they can be found other places besides Google, such as <a href="https://github.com/">GitHub</a> and <a href="https://fonts.bunny.net">Bunny CDN</a>. Wading through thousands of free fonts can be a daunting endeavor, so here are (in my opinion) some of the most versatile and best-designed typefaces on Google Fonts.</p>
 
 <p>&nbsp;</p>
 
@@ -114,6 +116,9 @@
     
   <li><a href="https://fonts.google.com/specimen/Faustina">Faustina</a>
     <small class="meta">serif, humanist</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Fraunces">Fraunces</a>
+    <small class="meta">serif, oldstyle, soft-serif, rounded, funky, quirky, display</small></li>
     
   <li><a href="https://fonts.google.com/specimen/Gentium+Book+Plus">Gentium Book Plus</a>
     <small class="meta">serif</small></li>
@@ -205,7 +210,7 @@
 
 <footer class="footer">
   <small>
-    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://fonts.google.com/specimen/DM+Serif+Display">DM Serif Display</a> and <a href="https://rsms.me/inter/">Inter</a>.
+    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://www.productiontype.com/family/newsreader">Newsreader</a> and <a href="https://rsms.me/inter/">Inter</a>.
   </small>
 </footer>
 
