--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
 <link rel="preconnect" href="https://fonts.bunny.net">
-<link href="https://fonts.bunny.net/css?family=dm-serif-display:400" rel="stylesheet" />
+<link href="https://fonts.bunny.net/css?family=newsreader:300,300i" rel="stylesheet" />
+
 <link rel="stylesheet" href="assets/styles.css" />
   
 
@@ -47,7 +49,7 @@
 
 <main class="index">
 <article class="intro">
-  <h1>Welcome to Typo.town</h1>
+  <h1 class="italic">Welcome to Typo.town</h1>
 <p class="lead">A personal resource on typography. For now there are two lists: <a href="google-fonts.html">Google Fonts</a> and <a href="adobe-fonts.html">Adobe&nbsp;Fonts</a>.</p>
 
 <p>My intention for <strong>Typo.town</strong> is to be a resource for discovering and selecting great typography. This will likely take the shape of a blog, a wiki, or maybe something in between.</p> 
@@ -59,7 +61,7 @@
 
 <footer class="footer">
   <small>
-    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://fonts.google.com/specimen/DM+Serif+Display">DM Serif Display</a> and <a href="https://rsms.me/inter/">Inter</a>.
+    &copy; 2023 by <a href="https://nicksimson.com">Nick Simson</a>. Typeset in <a href="https://www.productiontype.com/family/newsreader">Newsreader</a> and <a href="https://rsms.me/inter/">Inter</a>.
   </small>
 </footer>
 
