--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -170,7 +170,13 @@
     <small class="meta">sans serif, humanist</small></li>
       
   <li><a href="https://fonts.adobe.com/fonts/dapifer">Dapifer</a>
-    <small class="meta">serif, slab serif, </small></li>
+    <small class="meta">serif, slab serif </small></li>
+  
+  <li><a href="https://fonts.adobe.com/fonts/dashiell-fine">Dashiell Fine</a>
+      <small class="meta">serif, display, contrast, sharp</small></li>
+
+  <li><a href="https://fonts.adobe.com/fonts/dashiell-text">Dashiell Text</a>
+        <small class="meta">serif</small></li> 
 
   <li><a href="https://fonts.adobe.com/fonts/decoy">Decoy</a>
     <small class="meta">serif, rounded, funky, display</small></li>
@@ -207,6 +213,9 @@
   
   <li><a href="https://fonts.adobe.com/fonts/ff-scala-sans">FF Scala Sans</a>
     <small class="meta">sans serif, humanist</small></li>
+
+    <li><a href="https://fonts.adobe.com/fonts/ff-spinoza">FF Spinoza</a>
+      <small class="meta">serif, Antiqua, low-contrast</small></li>  
 
   <li><a href="https://fonts.adobe.com/fonts/ff-tisa">FF Tisa</a>
     <small class="meta">serif, slab serif, hybrid</small></li> 
