Added some new fonts
Radio Canada, FF Folk, Instrument Sans

--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -199,6 +199,9 @@
   <li><a href="https://fonts.adobe.com/fonts/filson">Filson</a>
     <small class="meta">sans serif, geometric</small></li>
 
+    <li><a href="https://fonts.adobe.com/fonts/ff-folk">FF Folk</a>
+      <small class="meta">script, display, handmade, Ben Shahn</small></li>   
+
   <li><a href="https://fonts.adobe.com/fonts/ff-meta/">FF Meta</a>
     <small class="meta">sans serif, humanistic, superfamily</small></li>
     
