--- a/google-fonts.html
+++ b/google-fonts.html
@@ -131,7 +131,10 @@
     
   <li><a href="https://fonts.google.com/specimen/Inknut+Antiqua">Inknut Antiqua</a>
     <small class="meta">serif, Venitian, humanist</small></li>
-    
+  
+  <li><a href="https://fonts.google.com/specimen/Instrument+Sans/">Instrument Sans</a>
+    <small class="meta">sans serif, neo-grotesque, alternate glyphs</small></li>  
+
   <li><a href="https://fonts.google.com/specimen/Inter">Inter</a>
     <small class="meta">sans serif, grotesque, UI</small></li>
 
@@ -179,6 +182,9 @@
 
   <li><a href="https://fonts.google.com/specimen/Prompt">Prompt</a>
     <small class="meta">sans serif, geometric</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Radio+Canada">Radio Canada</a>
+    <small class="meta">sans serif, humanist</small></li>  
 
     <li><a href="https://fonts.google.com/specimen/Rosario">Rosario</a>
       <small class="meta">sans serif, humanist</small></li>
