Added Aboreto and Gloock to Google Fonts
I do like saying "Gloock" out loud.

--- a/google-fonts.html
+++ b/google-fonts.html
@@ -57,6 +57,10 @@
 
 <p>
 <ul class="list-unstyled, list-multi-col">
+
+  <li><a href="https://fonts.google.com/specimen/Aboreto">Aboreto</a>
+    <small class="meta">sans serif, hybrid, vertical stress, engraved, contrast</small></li>
+
   <li><a href="https://fonts.google.com/specimen/Albert+Sans">Albert Sans</a>
   <small class="meta">sans serif, geometric</small></li>
 
@@ -122,6 +126,9 @@
     
   <li><a href="https://fonts.google.com/specimen/Gentium+Book+Plus">Gentium Book Plus</a>
     <small class="meta">serif</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Gloock">Gloock</a>
+    <small class="meta">serif, display, contrast</small></li>  
 
   <li><a href="https://fonts.google.com/specimen/Hanken+Grotesk">Hanken Grotesk</a>
     <small class="meta">sans serif, grotesque</small></li>
