--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -81,6 +81,9 @@
 
   <li><a href="https://fonts.adobe.com/fonts/anonymous">Anonymous</a>
     <small class="meta">monospace</small></li>
+  
+  <li><a href="https://fonts.adobe.com/fonts/area-variable">Area Variable</a>
+    <small class="meta">sans serif, variable, geometric, inktrap</small></li>
 
   <li><a href="https://fonts.adobe.com/fonts/arno">Arno</a>
     <small class="meta">serif, humanist</small></li>
