--- a/google-fonts.html
+++ b/google-fonts.html
@@ -228,6 +228,9 @@
       
     <li><a href="https://fonts.google.com/specimen/Work+Sans">Work Sans</a>
       <small class="meta">sans serif, grotesque</small></li>
+    
+    <li><a href="https://fonts.google.com/specimen/Yrsa">Yrsa</a>
+      <small class="meta">serif, global</small></li>
 </ul>
 </p>
 
