--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -421,6 +421,9 @@
   <li><a href="https://fonts.adobe.com/fonts/quiet-sans">Quiet Sans</a>
     <small class="meta">sans serif, geometric</small></li>
 
+  <li><a href="https://fonts.adobe.com/fonts/roc-grotesk">Roc Grotesk</a>
+      <small class="meta">sans serif, grotesque, display</small></li>
+
   <li><a href="https://fonts.adobe.com/fonts/runda">Runda</a>
     <small class="meta">sans serif</small></li>
   
