--- a/google-fonts.html
+++ b/google-fonts.html
@@ -94,6 +94,9 @@
   <li><a href="https://fonts.google.com/specimen/Bodoni+Moda">Bodoni Moda</a>
     <small class="meta">serif, didone, contrast</small></li>
 
+  <li><a href="https://fonts.google.com/specimen/Bricolage+Grotesque/">Bricolage Grotesque</a>
+      <small class="meta">sans serif, display, grotesque, ink trap</small></li>
+
   <li><a href="https://fonts.google.com/specimen/Calistoga">Calistoga</a>
     <small class="meta">serif, display, rounded, vintage</small></li> 
 
