Added some Adobe Fonts
Nautica, Oddity Script, Superior Title

--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -346,6 +346,9 @@
   <li><a href="https://fonts.adobe.com/fonts/mvb-solitaire-pro">MVB Solitaire Pro</a>
     <small class="meta">sans serif, humanist, gothic</small></li>
 
+  <li><a href="https://fonts.adobe.com/fonts/nautica">Nautica</a>
+    <small class="meta">script, display, contrast</small></li>  
+
   <li><a href="https://fonts.adobe.com/fonts/nazare">Nazaré</a>
     <small class="meta">sans serif, semi-serif, contrast</small></li>   
   
@@ -381,6 +384,9 @@
 
   <li><a href="https://fonts.adobe.com/fonts/objektiv">Objektiv</a>
     <small class="meta">sans serif, geometric</small></li>
+  
+  <li><a href="https://fonts.adobe.com/fonts/oddity-script">Oddity</a>
+    <small class="meta">script, display, reverse contrast</small></li>  
   
   <li><a href="https://fonts.adobe.com/fonts/operetta">Operetta</a>
     <small class="meta">serif, didone</small></li>
@@ -450,6 +456,9 @@
 
   <li><a href="https://fonts.adobe.com/fonts/stratos#fonts-section">Stratos</a>
     <small class="meta">sans serif, geometric</small></li>
+
+  <li><a href="https://fonts.adobe.com/fonts/superior-title">Superior Title</a>
+    <small class="meta">serif, display, contrast</small></li>  
     
   <li><a href="https://fonts.adobe.com/fonts/supria-sans">Supria Sans</a>
     <small class="meta">sans serif, grotesque</small></li>
