--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -393,6 +393,18 @@
 
   <li><a href="https://fonts.adobe.com/fonts/p22-underground">P22 Underground</a>
     <small class="meta">sans serif, geometric, humanist, British</small></li>
+  
+  <li><a href="https://fonts.adobe.com/fonts/panel">Panel</a>
+      <small class="meta">serif, quirky, superfamily</small></li>
+
+  <li><a href="https://fonts.adobe.com/fonts/panel-mono">Panel Mono</a>
+    <small class="meta">serif, monospace, quirky, superfamily</small></li>
+
+  <li><a href="https://fonts.adobe.com/fonts/panel-sans">Panel Sans</a>
+    <small class="meta">sans serif, quirky, superfamily</small></li>
+
+  <li><a href="https://fonts.adobe.com/fonts/panel-sans-mono">Panel Sans Mono</a>
+    <small class="meta">sans serif, monospace, quirky, superfamily</small></li>
 
   <li><a href="https://fonts.adobe.com/fonts/paralucent">Paralucent</a>
     <small class="meta">sans serif</small></li>
