--- a/google-fonts.html
+++ b/google-fonts.html
@@ -135,6 +135,9 @@
 
   <li><a href="https://fonts.google.com/specimen/Fraunces">Fraunces</a>
     <small class="meta">serif, oldstyle, soft-serif, rounded, funky, quirky, display</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Gaegu">Gaegu</a>
+      <small class="meta">script, handmade</small></li>
     
   <li><a href="https://fonts.google.com/specimen/Gentium+Book+Plus">Gentium Book Plus</a>
     <small class="meta">serif</small></li>
