--- a/google-fonts.html
+++ b/google-fonts.html
@@ -23,7 +23,7 @@
 <!-- Search & social optimisation
   create using something like megatags.co -->
 <title>Google Fonts - Typo.town</title>
-<meta name="description" content="A personal guide to typefaces hosted on Adobe Fonts.">
+<meta name="description" content="A personal guide to typefaces hosted on Google Fonts.">
 <!-- Insert new tags here -->
 
 
@@ -73,7 +73,7 @@
   <li><a href="https://fonts.google.com/specimen/Archivo">Archivo</a>
     <small class="meta">sans serif, grotesque</small></li>
 
-  <li><a href="https://fonts.google.com/specimen/Atkinson+Hyperlegible">Atkinson Hyperlegible</a>
+  <li><a href="https://fonts.google.com/specimen/Atkinson+Hyperlegible+Next">Atkinson Hyperlegible Next</a>
       <small class="meta">sans serif, grotesque, brand, accessibility</small></li>
 
   <li><a href="https://fonts.google.com/specimen/Barlow">Barlow</a>
@@ -135,6 +135,9 @@
 
   <li><a href="https://fonts.google.com/specimen/Fraunces">Fraunces</a>
     <small class="meta">serif, oldstyle, soft-serif, rounded, funky, quirky, display</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Funnel+Sans">Funnel Sans</a>
+    <small class="meta">sans serif, geometric</small></li>
 
   <li><a href="https://fonts.google.com/specimen/Gaegu">Gaegu</a>
       <small class="meta">script, handmade</small></li>
