--- a/google-fonts.html
+++ b/google-fonts.html
@@ -68,7 +68,10 @@
     <small class="meta">serif, super family</small></li>
   
   <li><a href="https://fonts.google.com/specimen/Alegreya+Sans">Alegreya Sans</a>
-  <small class="meta">sans serif, humanist, super family</small></li>
+    <small class="meta">sans serif, humanist, super family</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Anonymous+Pro">Anonymous Pro</a>
+    <small class="meta">monospace</small></li>
   
   <li><a href="https://fonts.google.com/specimen/Archivo">Archivo</a>
     <small class="meta">sans serif, grotesque</small></li>
@@ -148,6 +151,9 @@
   <li><a href="https://fonts.google.com/specimen/Gloock">Gloock</a>
     <small class="meta">serif, display, contrast</small></li>  
 
+  <li><a href="https://fonts.google.com/specimen/Gowun+Batang">Gowun Batang</a>
+    <small class="meta">serif, calligraphic, humanist</small></li>  
+
   <li><a href="https://fonts.google.com/specimen/Hanken+Grotesk">Hanken Grotesk</a>
     <small class="meta">sans serif, grotesque</small></li>
 
@@ -192,6 +198,9 @@
 
   <li><a href="https://fonts.google.com/specimen/Overpass+Mono">Overpass Mono</a>
     <small class="meta">monospace, highway</small></li>
+
+  <li><a href="https://fonts.google.com/specimen/Platypi/">Platypi</a>
+     <small class="meta">serif, wedges</small></li>  
     
   <li><a href="https://fonts.google.com/featured/Plex">Plex (collection)</a>
     <small class="meta">sans serif, serif, monospace, superfamily, brand</small></li>
@@ -209,7 +218,10 @@
     <small class="meta">sans serif, geometric, Thai</small></li>
 
   <li><a href="https://fonts.google.com/specimen/Radio+Canada">Radio Canada</a>
-    <small class="meta">sans serif, humanist, brand</small></li>  
+    <small class="meta">sans serif, humanist, brand</small></li> 
+    
+  <li><a href="https://fonts.google.com/specimen/Rethink+Sans">Rethink Sans</a>
+    <small class="meta">sans serif, brand, geometric</small></li>  
 
     <li><a href="https://fonts.google.com/specimen/Rosario">Rosario</a>
       <small class="meta">sans serif, humanist</small></li>
