--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -226,6 +226,9 @@
   <li><a href="https://fonts.adobe.com/fonts/ff-tisa">FF Tisa</a>
     <small class="meta">serif, slab serif, hybrid</small></li> 
 
+  <li><a href="https://fonts.adobe.com/fonts/fisterra">Fisterra</a>
+    <small class="meta">serif, display, condensed</small></li>
+
   <li><a href="https://fonts.adobe.com/fonts/freight-sans">Freight Sans</a>
     <small class="meta">sans serif, humanist, superfamily</small></li>
 
