--- a/adobe-fonts.html
+++ b/adobe-fonts.html
@@ -227,7 +227,7 @@
     <small class="meta">serif, slab serif, hybrid</small></li> 
 
   <li><a href="https://fonts.adobe.com/fonts/fisterra">Fisterra</a>
-    <small class="meta">serif, display, condensed</small></li>
+    <small class="meta">serif, display, flared, condensed</small></li>
 
   <li><a href="https://fonts.adobe.com/fonts/freight-sans">Freight Sans</a>
     <small class="meta">sans serif, humanist, superfamily</small></li>
